--- a/src/app/login-reactive/login-reactive.component.html
+++ b/src/app/login-reactive/login-reactive.component.html
@@ -2,26 +2,67 @@
   <mat-card-title>Login (Reactive)</mat-card-title>
   <mat-card-content>
 
-    <form class="login-form data-form">
+    <form class="login-form data-form" [formGroup]="form">
 
       <mat-form-field>
 
-        <input matInput type="email" name="email"
-               placeholder="Email">
+        <input
+          formControlName="email" 
+          matInput 
+          type="email" 
+          name="email"
+          placeholder="Email">
+        
+        <!-- <mat-error *ngIf="email.errors?.required">this field is required</mat-error> -->
+        <mat-error *ngIf="email.errors?.required">The email is mandatory</mat-error>
 
       </mat-form-field>
 
       <mat-form-field>
 
-        <input matInput type="password" placeholder="Password">
+        <input 
+          matInput 
+          formControlName="password"
+          type="password" 
+          placeholder="Password">
+
+        <mat-error *ngIf="password.errors?.required">this field is required</mat-error>
 
       </mat-form-field>
 
-      <button mat-raised-button color="primary">
+      <ng-container *ngIf="password.errors | onlyOneError:['minlength', 'passwordStrength'] as error">
+        <div class="field-message" *ngIf="error.minlength">
+          minimum password required is {{ error.minlength.requiredLength }}
+        </div>
+        <div class="field-message" *ngIf="error.passwordStrength">
+          your password must contain numeric, lowercase and uppercase letters
+        </div>
+      </ng-container>
+
+      <button 
+        mat-raised-button color="primary" (click)="onLogin()">
         Login
       </button>
+      
+      <button mat-raised-button (click)="onReset()">Reset</button>
 
     </form>
+
+    <div class="form-value">
+      {{ form.value | json }}
+    </div>
+
+    <div class="form-value">
+      {{ form.valid | json }}
+    </div>
+
+    <div class="form-value">
+      {{ email.errors | json }}
+    </div>
+
+    <div class="form-value">
+      {{ password.errors | json }}
+    </div>
 
   </mat-card-content>
 </mat-card>
