changed commit message

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -5,6 +5,8 @@
         <mat-radio-button value="premium">Premium</mat-radio-button>
     </mat-radio-group>
 
+    <file-upload requiredFleType="image/png"></file-upload>
+
     <mat-form-field>
         <input 
             matInput placeholder="Price"
